--- a/src/Components/Navbar/Navbar.module.scss
+++ b/src/Components/Navbar/Navbar.module.scss
@@ -1,32 +1,81 @@
 .navbar{
-  background-color: #1e293b;
+  background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)),url('/Contorno del Pizarron.jpg');
   color: white;
-  padding: 1rem 2rem;
+  padding: 0.8rem 2rem;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items:end;
+  gap: 1rem;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.4);
+  border-bottom: 4px solid var(--Color-Madera-Clara);
+
 
   .logo{
     font-size: 1.5rem;
     font-weight: bold;
     letter-spacing: 0.5px;
+    padding: 0.3rem ;
+    transition: all 0.3s ease-out;
+  }
+
+  .spacer{
+    display: flex;
+    align-items: center;
+    gap: 2rem;
   }
 
   .links{
     display: flex;
-    gap: 1.5rem;
+    gap: 0.8rem;
     list-style: none;
     li{
       a{
         color: white;
         text-decoration: none;
         font-size: 0.95rem;
+        font-weight: 500;
+        padding: 0.5rem 1.2rem;
+        border-radius: 50px;
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+        transition: all 0.3s ease-out;
         cursor: pointer;
-        transition: color 0.2s ease-in-out;
+        transition: color 0.2s ease;
         &:hover{
-          color: #3b82f6;
+          background-color: rgba(255, 247, 247, 0.185);
+          transform: translateY(-2px);
         }
       }
+      &.active {
+        background-color: var(--color-crema);
+        color: var(--color-texto);
+        font-weight: bold;
+        box-shadow: 0 4px 6px rgba(0,0,0,0.2);
+
+        &:hover {
+          background-color: white;
+          transform: translateY(-2px);
+        }
+      }
+    }
+  }
+  .profile{
+    display:flex;
+    align-items: center;
+    gap:0.8rem;
+    font-weight: bold;
+    cursor: pointer;
+    padding: 0.5rem 1.2rem;
+    border-radius: 50px;
+    transition: all 0.3s ease;
+
+    &:hover{
+      background-color: rgba(255, 255, 255, 0.15);
+      transform: translateY(2px);
     }
   }
 }
