--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,17 @@
+:root {
+  /* Colores de la intefaz */
+  --Color-Madera-Oscura:#5d3a1a;
+  --Color-Madera-Clara:#8b5a2b;
+  --color-crema:#fdf8e7;
+  --color-texto:#333333;
+  /* Colores de los Posits*/
+  --post-rojo:#ffd6d6;
+  --post-azul:#d6e0ff;
+  --post-verde:#d6ffd6;
+  --post-amarillo:#fff5d6;
+  --post-morado:#e6d6ff;
+}
+
 *{
   margin: 0;
   padding: 0;
@@ -6,7 +20,10 @@
 
 body {
   font-family: system-ui, -apple-system, sans-serif;
-  background-color: #f8f9fa;
-  color: #212529;
-  padding: 2rem;
+  color: var(--color-texto);
+  background-color: #a67c52;
+  background-image: url('/background.jpg');
+  background-repeat: repeat;
+  background-size: cover;
+  padding: 0;
 }
