--- a/src/Components/Navbar/Navbar.module.scss
+++ b/src/Components/Navbar/Navbar.module.scss
@@ -18,7 +18,7 @@
     font-weight: bold;
     letter-spacing: 0.5px;
     padding: 0.3rem ;
-    transition: all 0.3s ease-out;
+    transition: all 0.3s ease;
   }
 
   .spacer{
@@ -42,12 +42,12 @@
         display: flex;
         align-items: center;
         gap: 0.5rem;
-        transition: all 0.3s ease-out;
+        transition: all 0.3s ease;
         cursor: pointer;
-        transition: color 0.2s ease;
+        
         &:hover{
           background-color: rgba(255, 247, 247, 0.185);
-          transform: translateY(-2px);
+          transform: translateY(2px);
         }
       }
       &.active {
@@ -58,7 +58,7 @@
 
         &:hover {
           background-color: white;
-          transform: translateY(-2px);
+          transform: translateY(2px);
         }
       }
     }
